WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88216
[GTK] Memory leak in PasteboardHelper
https://bugs.webkit.org/show_bug.cgi?id=88216
Summary
[GTK] Memory leak in PasteboardHelper
Sudarsana Nagineni (babu)
Reported
2012-06-04 00:29:06 PDT
Valgrind reports the following memory leak in PasteboardHelper. ==18696== 752 (32 direct, 720 indirect) bytes in 2 blocks are definitely lost in loss record 35,564 of 40,079 ==18696== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==18696== by 0xB413A38: g_malloc (gmem.c:159) ==18696== by 0xB426C62: g_slice_alloc (gslice.c:1003) ==18696== by 0xA71EF02: gtk_target_list_new (gtkselection.c:228) ==18696== by 0x756EBE4: WebCore::PasteboardHelper::dropAtomsForContext(_GtkWidget*, _GdkDragContext*) (PasteboardHelper.cpp:263) ==18696== by 0x7560138: WebCore::queryNewDropContextData(WebCore::DroppingContext*, _GtkWidget*, unsigned int) (GtkDragAndDropHelper.cpp:128) ==18696== by 0x75602CB: WebCore::GtkDragAndDropHelper::handleDragMotion(_GdkDragContext*, WebCore::IntPoint const&, unsigned int) (GtkDragAndDropHelper.cpp:141) ==18696== by 0x61F7C58: webkit_web_view_drag_motion(_GtkWidget*, _GdkDragContext*, int, int, unsigned int) (webkitwebview.cpp:1512) ==18696== by 0xA6B1433: _gtk_marshal_BOOLEAN__OBJECT_INT_INT_UINT (gtkmarshalers.c:808) ==18696== by 0xB186CA1: g_closure_invoke (gclosure.c:777) ==18696== by 0xB198338: signal_emit_unlocked_R (gsignal.c:3585) ==18696== by 0xB19FD7D: g_signal_emit_valist (gsignal.c:3306) ==18696== by 0xB1A0753: g_signal_emit_by_name (gsignal.c:3389) ==18696== by 0xA8007D6: gtk_drag_dest_motion (gtkdnd.c:2312) ==18696== by 0xA800113: _gtk_drag_dest_handle_event (gtkdnd.c:1992) ==18696== by 0xA6AFF72: gtk_main_do_event (gtkmain.c:1750) ==18696== by 0xDD7AD11: gdk_event_source_dispatch (gdkeventsource.c:358) ==18696== by 0xB40DC99: g_main_context_dispatch (gmain.c:2515) ==18696== by 0xB40E05F: g_main_context_iterate.isra.23 (gmain.c:3123) ==18696== by 0xB40E459: g_main_loop_run (gmain.c:3317) ==18696== by 0xA6AF25C: gtk_main (gtkmain.c:1165) ==18696== by 0x40546C: main (main.c:534) ==18696==
Attachments
Patch
(1.56 KB, patch)
2012-06-04 05:17 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-06-04 05:17:21 PDT
Created
attachment 145563
[details]
Patch Fixed memory leak in PasteboardHelper. Somehow I missed this leak fixing in
r119063
.
WebKit Review Bot
Comment 2
2012-06-04 08:18:37 PDT
Comment on
attachment 145563
[details]
Patch Clearing flags on attachment: 145563 Committed
r119398
: <
http://trac.webkit.org/changeset/119398
>
WebKit Review Bot
Comment 3
2012-06-04 08:18:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug