[GTK] Memory leak in PasteboardHelper https://bugs.webkit.org/show_bug.cgi?id=88216

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-04
Reviewed by Martin Robinson.

Fixed a memory leak in PasteboardHelper by using adoptRef instead
of just getting a new reference of TargetList.

No new tests because of no behavior changes.

* platform/gtk/PasteboardHelper.cpp:
(WebCore::PasteboardHelper::dropAtomsForContext):

Canonical link: https://commits.webkit.org/106065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119398 268f45cc-cd09-0410-ab3c-d52691b4dbfc